c4prj2_input/grade.txt
Grading at Tue Oct  2 02:39:04 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:51:24: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
  fc->decks[i].cards[j] = &deck->cards[k];
                        ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
